# piRemCam-server

./: CMakeLists.txt  README.md  camera.cpp  camera.h  cameralist.cpp  cameralist.h  main.cpp  piRemCam.kdev4  piremcam.conf  piremcam.service  process.cpp  process.h  task.h
.kdev4/: piRemCam.kdev4
